--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "server",
-    "dev": "server.js"
+   "start": "node server.js"
   },
   "keywords": [],
   "author": "",
